--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,14 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="primary">
+    <ion-title text-center>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <form>
+    <ic-input type="text" placeholder="Your Name"></ic-input>
+    <ic-input type="text" placeholder="Your Username"></ic-input>
+    <ic-input type="email" placeholder="Your Email"></ic-input>
+    <ic-input type="password" placeholder="Your Password"></ic-input>
+  </form>
 </ion-content>
